changing buttons look

--- a/app/views/news/display.erb
+++ b/app/views/news/display.erb
@@ -7,18 +7,21 @@
         <div class="row-fluid">
             <div class="span9">
                 <div class="row-fluid">
+
+
+
                     <ul class="nav nav-tabs">
                         <li>
-                            <a data-toggle="tab" href="#tab1">Ballet</a>
+                            <a data-toggle="tab" class="btn btn-large btn-primary" href="#tab1"><abbr title="Ballet Dance">Ballet</abbr></a>
                         </li>
                         <li>
-                            <a data-toggle="tab" href="#tab2">Modern</a>
+                            <a data-toggle="tab" class="btn btn-large btn-primary" href="#tab2"><abbr title="Modern Dance">Modern</abbr></a>
                         </li>
                         <li>
-                            <a data-toggle="tab" href="#tab3">Zumba</a>
+                            <a data-toggle="tab" class="btn btn-large btn-primary" href="#tab3"><abbr title="Zumba Dance">Zumba</abbr></a>
                         </li>
                         <li>
-                            <a data-toggle="tab" href="#tab4">Ballroom</a>
+                            <a data-toggle="tab" class="btn btn-large btn-primary" href="#tab4"><abbr title="Ballroom Dance">Ballroom</abbr></a>
                         </li>
                     </ul>
                     <div class="tab-content">
